--- a/CarsMaintenance/Properties/Resources.resx
+++ b/CarsMaintenance/Properties/Resources.resx
@@ -126,4 +126,8 @@
   <data name="RequiredErrorMessage" xml:space="preserve">
     <value>{0} 必须填.</value>
   </data>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="Login" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Login.tif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
